# OpenAIS-Smart-Lights

./: README.md
app/controller/: Cargo.toml  run1.sh  topology.yaml
app/controller/src/: discovery.rs  main.rs  service.rs
app/light-point/: Cargo.toml  run1.sh  run2.sh  run3.sh
app/light-point/src/: device.rs  light.rs  main.rs  service.rs
app/push-button/: Cargo.toml  run1.sh
app/push-button/src/: device.rs  main.rs  service.rs  switch.rs
docs/Article/: bibliography.bib  report.tex
docs/Objective/: bib.bib  objective.tex
docs/Wireshark/: Wireshark-analyze-decode  dim-light.pcap  turn-off-light.pcap
