# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "openais_light_point"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = "^1.2"
coap = "0.12"
coap-lite = "0.9.1"
cbor-data = "0.8.15"
palette = "0.6"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
